--- a/src/LoginRegistration/Registration/Registration.scss
+++ b/src/LoginRegistration/Registration/Registration.scss
@@ -1,3 +1,10 @@
+@mixin errors {
+  color: red;
+  font-size: 0.9em;
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+
 .registration-container {
   height: 89vh;
   overflow: hidden;
@@ -43,9 +50,17 @@
           width: 20px;
           height: 20px;
           position: absolute;
-          top: 30%;
+          top: 50%;
           left: 94%;
+          transform: translateY(-50%);
           cursor: pointer;
+        }
+        .validation-errors {
+          @include errors;
+        }
+        .pass-validation-errors {
+          @include errors;
+          margin-top: 0px;
         }
       }
     }
