--- a/src/LoginRegistration/Login/Login.scss
+++ b/src/LoginRegistration/Login/Login.scss
@@ -1,3 +1,10 @@
+@mixin errors {
+  color: red;
+  font-size: 0.9em;
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+
 .login-container {
   height: 89vh;
   overflow: hidden;
@@ -46,6 +53,13 @@
           top: 55.5%;
           left: 79%;
           cursor: pointer;
+        }
+        .validation-errors {
+          @include errors;
+        }
+        .pass-validation-errors {
+          @include errors;
+          margin-top: -45px;
         }
       }
     }
