--- a/src/Products/ProductPage/ProductPage.css
+++ b/src/Products/ProductPage/ProductPage.css
@@ -1,1 +1,32 @@
-/*# sourceMappingURL=ProductPage.css.map */
+.product-page-container {
+  margin-left: 100px;
+}
+.product-page-container .product-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: start;
+}
+.product-page-container .product-list .product-card {
+  width: 412px;
+  height: 614px;
+  padding-bottom: 20px;
+}
+.product-page-container .product-list .product-card .product-image {
+  border: solid 1px #e1dfe1;
+  width: 412px;
+  height: 549px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 8px;
+}
+.product-page-container .product-list .product-card .product-name {
+  font-size: 18px;
+  color: #10151f;
+  font-weight: 500;
+}
+.product-page-container .product-list .product-card .product-price {
+  font-size: 16px;
+  color: #10151f;
+  font-weight: 500;
+}/*# sourceMappingURL=ProductPage.css.map */
