--- a/src/Products/ProductPage/ProductPage.css
+++ b/src/Products/ProductPage/ProductPage.css
@@ -1,20 +1,74 @@
 .product-page-container {
-  margin-left: 100px;
+  margin: 0 100px;
+}
+.product-page-container .filter {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 72px;
+  margin-bottom: 32px;
+}
+.product-page-container .filter .title {
+  font-weight: 600;
+  font-size: 42px;
+  color: #10151f;
+}
+.product-page-container .filter .filter-options {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+}
+.product-page-container .filter .filter-options .showing-pages {
+  color: #3e424a;
+  font-size: 12px;
+  font-weight: 400;
+}
+.product-page-container .filter .filter-options .hor-line {
+  width: 1px;
+  height: 14px;
+  background-color: #e1dfe1;
+}
+.product-page-container .filter .filter-options .price-filter {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+.product-page-container .filter .filter-options .price-filter img {
+  width: 24px;
+  height: 24px;
+}
+.product-page-container .filter .filter-options .price-filter p {
+  font-size: 16px;
+  color: #10151f;
+  font-weight: 400;
+}
+.product-page-container .filter .filter-options .sort-by {
+  width: 80px;
+  height: 40px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #10151f;
+  font-weight: 400;
+  cursor: pointer;
+}
+.product-page-container .filter .filter-options .sort-by .sort-by-option {
+  border-radius: 10px;
 }
 .product-page-container .product-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 21px;
   justify-content: start;
 }
 .product-page-container .product-list .product-card {
-  width: 412px;
+  width: 410.5px;
   height: 614px;
   padding-bottom: 20px;
 }
 .product-page-container .product-list .product-card .product-image {
   border: solid 1px #e1dfe1;
-  width: 412px;
+  width: 408.5px;
   height: 549px;
   -o-object-fit: cover;
      object-fit: cover;
