--- a/src/Products/ProductPage/ProductPage.scss
+++ b/src/Products/ProductPage/ProductPage.scss
@@ -185,4 +185,47 @@
       }
     }
   }
+  .pagination-container {
+    margin-top: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    .page-arrow {
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    .page-btn {
+      width: 36px;
+      height: 36px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid transparent;
+      border-radius: 8px;
+      background: #fff;
+      cursor: pointer;
+      font-size: 14px;
+      color: #4b5563;
+      transition: all 0.2s;
+
+      &:hover {
+        border-color: #d1d5db;
+        background: #f9fafb;
+      }
+
+      &.active {
+        border: 1px solid #f97316; // ნარინჯისფერი
+        color: #f97316;
+        font-weight: 600;
+      }
+    }
+
+    .dots {
+      color: #9ca3af;
+      font-size: 14px;
+      pointer-events: none;
+    }
+  }
 }
