--- a/src/Products/ProductPage/ProductPage.css
+++ b/src/Products/ProductPage/ProductPage.css
@@ -160,6 +160,8 @@
   width: 410.5px;
   height: 614px;
   padding-bottom: 20px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
 .product-page-container .product-list .product-card .product-image {
   border: solid 1px #e1dfe1;
@@ -178,6 +180,11 @@
   font-size: 16px;
   color: #10151f;
   font-weight: 500;
+}
+.product-page-container .product-list .product-card:hover {
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.05);
+  border-radius: 12px;
+  scale: 1.02;
 }
 .product-page-container .pagination-container {
   margin-top: 32px;
