--- a/src/Products/ProductPage/ProductPage.scss
+++ b/src/Products/ProductPage/ProductPage.scss
@@ -168,6 +168,8 @@
       width: 410.5px;
       height: 614px;
       padding-bottom: 20px;
+      cursor: pointer;
+      transition: 0.3s ease-in-out;
       .product-image {
         border: solid 1px #e1dfe1;
         width: 408.5px;
@@ -183,6 +185,12 @@
         font-size: 16px;
         @include text;
       }
+    }
+
+    .product-card:hover {
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.05);
+      border-radius: 12px;
+      scale: 1.02;
     }
   }
   .pagination-container {
