--- a/src/LoginRegistration/Header/Header.css
+++ b/src/LoginRegistration/Header/Header.css
@@ -3,8 +3,7 @@ header {
   display: flex;
   justify-content: space-between;
 }
-
-.logo {
+header .logo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,12 +11,50 @@ header {
   text-decoration: none;
   color: #10151f;
 }
-
-.login-link {
+header .login .user-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+header .login .user-photo {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+header .login .dropdown {
+  width: 150px;
+  position: absolute;
+  top: 40px;
+  left: -100%;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+header .login .dropdown button {
+  background-color: #ff4000;
+  border: none;
+  color: white;
+  padding: 8px 12px;
+  border-radius: 20px;
+  margin-top: 5px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+header .login .dropdown button:hover {
+  background-color: #8d2800;
+}
+header .login .arrow-icon {
+  padding: 5px;
+}
+header .login .login-link {
   text-decoration: none;
   color: #10151f;
 }
-.login-link .login {
+header .login .login-link .login {
   display: flex;
   justify-content: center;
   align-items: center;
