--- a/src/LoginRegistration/Header/Header.scss
+++ b/src/LoginRegistration/Header/Header.scss
@@ -9,18 +9,59 @@ header {
   margin: 28px 100px;
   display: flex;
   justify-content: space-between;
-}
 
-.logo {
-  @include flex;
-  text-decoration: none;
-  color: #10151f;
-}
-
-.login-link {
-  text-decoration: none;
-  color: #10151f;
-  .login {
+  .logo {
     @include flex;
+    text-decoration: none;
+    color: #10151f;
+  }
+
+  .login {
+    .user-container {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+    .user-photo {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .dropdown {
+      width: 150px;
+      position: absolute;
+      top: 40px;
+      left: -100%;
+      z-index: 100;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      button {
+        background-color: #ff4000;
+        border: none;
+        color: white;
+        padding: 8px 12px;
+        border-radius: 20px;
+        margin-top: 5px;
+        cursor: pointer;
+        transition: 0.5s;
+      }
+      button:hover {
+        background-color: #8d2800;
+      }
+    }
+    .arrow-icon {
+      padding: 5px;
+    }
+    .login-link {
+      text-decoration: none;
+      color: #10151f;
+      .login {
+        @include flex;
+      }
+    }
   }
 }
