--- a/src/LoginRegistration/Registration/Registration.css
+++ b/src/LoginRegistration/Registration/Registration.css
@@ -39,7 +39,41 @@
   flex-direction: column;
   gap: 24px;
 }
-.registration-container .form-container .form-inputs-container .input-container input {
+.registration-container .form-container .form-inputs-container .input-container .photo-upload-container {
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.registration-container .form-container .form-inputs-container .input-container .photo-upload-container .upload-label {
+  width: 100px;
+  color: #3e424a;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0 15px;
+}
+.registration-container .form-container .form-inputs-container .input-container .photo-upload-container .photo-preview {
+  display: flex;
+  align-items: center;
+}
+.registration-container .form-container .form-inputs-container .input-container .photo-upload-container .photo-preview .preview-img {
+  width: 100px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.registration-container .form-container .form-inputs-container .input-container .photo-upload-container .photo-preview button {
+  background-color: white;
+  color: #3e424a;
+  border: none;
+  padding: 6px 10px;
+  cursor: pointer;
+  font-size: 14px;
+}
+.registration-container .form-container .form-inputs-container .input-container .inputs {
   width: 560px;
   padding: 10.5px 12px;
   border: solid 1px #e1dfe1;
