--- a/src/Products/Congrats/Congrats.css
+++ b/src/Products/Congrats/Congrats.css
@@ -1,1 +1,43 @@
-/*# sourceMappingURL=Congrats.css.map */
+.congrats-container {
+  margin-top: 200px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.congrats-container .congrats-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.congrats-container .congrats-content .tick {
+  width: 110px;
+  height: 110px;
+}
+.congrats-container .congrats-content .congrats-title {
+  font-size: 55px;
+  color: #10151f;
+  font-weight: 600;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+.congrats-container .congrats-content .congrats-para {
+  font-size: 18px;
+  font-weight: 400;
+  color: #3e424a;
+  margin-top: 10px;
+  margin-bottom: 90px;
+}
+.congrats-container .congrats-content .congrats-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 214px;
+  height: 41px;
+  padding: 10px 40px;
+  background-color: #ff4000;
+  border-radius: 15px;
+  color: white;
+  font-size: 17px;
+  font-weight: 400;
+  text-decoration: none;
+}/*# sourceMappingURL=Congrats.css.map */
