--- a/src/LoginRegistration/Login/Login.css
+++ b/src/LoginRegistration/Login/Login.css
@@ -87,4 +87,90 @@
   color: #ff4000;
   font-weight: 500;
   text-decoration: none;
+}
+
+@media (max-width: 1400px) {
+  .login-container .photo-container .photo {
+    width: 1000px;
+    height: 900px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: left;
+       object-position: left;
+  }
+  .login-container .form-container .login-title {
+    margin-left: 110px;
+  }
+  .login-container .form-container .form-inputs-container .input-container input {
+    width: 350px;
+  }
+  .login-container .form-container .form-inputs-container .input-container .eye {
+    left: 88%;
+  }
+  .login-container .form-container .login-btn {
+    padding: 10px 170px;
+  }
+}
+@media (max-width: 1200px) {
+  .login-container .photo-container {
+    margin-right: -280px;
+  }
+  .login-container .photo-container .photo {
+    width: 350px;
+    height: 900px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 15%;
+       object-position: 15%;
+  }
+  .login-container .form-container {
+    margin-left: -100px;
+  }
+  .login-container .form-container .form-inputs-container .input-container .eye {
+    left: 72%;
+  }
+}
+@media (max-width: 1000px) {
+  .login-container .form-container .form-inputs-container .input-container .eye {
+    left: 86%;
+  }
+}
+@media (max-width: 900px) {
+  .login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .login-container .photo-container {
+    display: none;
+  }
+  .login-container .form-container .form-inputs-container .input-container input {
+    width: 300px;
+  }
+  .login-container .form-container .form-inputs-container .input-container .eye {
+    left: 70%;
+  }
+  .login-container .form-container .form-inputs-container .login-btn {
+    padding: 10px 140px;
+  }
+}
+@media (max-width: 700px) {
+  .login-container {
+    margin-left: -100px;
+  }
+  .login-container .form-container .form-inputs-container .input-container .eye {
+    left: 70%;
+  }
+}
+@media (max-width: 540px) {
+  .login-container {
+    margin-left: -150px;
+  }
+  .login-container .form-container .login-title {
+    margin-left: 130px;
+  }
+  .login-container .form-container .form-inputs-container .input-container .eye {
+    top: 60.5%;
+    left: 76%;
+  }
 }/*# sourceMappingURL=Login.css.map */
